tests/NormalTests/paczka1/fuzzy1/82060525.err
Error in line 2: S366 S366 34,7
Error in line 11: S366 S366 54,5
Error in line 13: 8qm S366 6,6
Error in line 16: s5mjx S761 357,5
Error in line 25: 2gyChqh S366 40,5
Error in line 28: ny6Zt7S4lR A421 65,2
